--- a/intl.zh-CN/自研内核 AliPG/支持插件列表.md
+++ b/intl.zh-CN/自研内核 AliPG/支持插件列表.md
@@ -6,57 +6,56 @@
 
 |插件名|12|11|10|9.4|
 |---|--|--|--|---|
-|address\_standardizer|无|2.5.1|2.5.1|无|
-|address\_standardizer\_data\_us|无|2.5.1|2.5.1|无|
+|address\_standardizer|2.5.4|2.5.4|2.5.4|无|
+|address\_standardizer\_data\_us|2.5.4|2.5.4|2.5.4|无|
 |aggs\_for\_arrays|无|无|1.3.1|无|
 |ali\_decoding|无|无|0.0.1|0.0.1|
-|bigm|1.2|1.2|1.2|无|
-|btree\_gin|1.3|1.3|1.2|1|
-|btree\_gist|1.5|1.5|1.5|1|
-|chkpass|无|无|1|1|
-|citext|1.6|1.5|1.4|1|
-|cube|1.4|1.4|1.2|1|
+|btree\_gin|1.3|1.3|1.2|1.0|
+|btree\_gist|1.5|1.5|1.5|1.0|
+|chkpass|无|无|1.0|1.0|
+|citext|1.6|1.5|1.4|1.0|
+|cube|1.4|1.4|1.2|1.0|
 |dblink|1.2|1.2|1.2|1.1|
-|dict\_int|1|1|1|1|
-|earthdistance|1.1|1.1|1.1|1|
-|fuzzystrmatch|1.1|1.1|1.1|1|
-|ganos\_address\_standardizer|3|无|3|无|
-|ganos\_address\_standardizer\_data\_us|3|无|3|无|
-|ganos\_geometry|3|无|3|无|
-|ganos\_geometry\_sfcgal|3|无|3|无|
-|ganos\_geometry\_topology|3|无|3|无|
-|ganos\_networking|3|无|3|无|
-|ganos\_pointcloud|3|3|3|无|
-|ganos\_pointcloud\_geometry|3|无|3|无|
-|ganos\_raster|3|无|3|无|
-|ganos\_spatialref|3|3|3|无|
-|ganos\_tiger\_geocoder|3|无|3|无|
-|ganos\_trajectory|3|无|3|无|
+|dict\_int|1.0|1.0|1.0|1.0|
+|earthdistance|1.1|1.1|1.1|1.0|
+|fuzzystrmatch|1.1|1.1|1.1|1.0|
+|ganos\_address\_standardizer|3.2|3.2|3.2|无|
+|ganos\_address\_standardizer\_data\_us|3.2|3.2|3.2|无|
+|ganos\_geometry|3.2|3.2|3.2|无|
+|ganos\_geometry\_sfcgal|3.2|3.2|3.2|无|
+|ganos\_geometry\_topology|3.2|3.2|3.2|无|
+|ganos\_networking|3.2|3.2|3.2|无|
+|ganos\_pointcloud|3.2|3.2|3.2|无|
+|ganos\_pointcloud\_geometry|3.2|3.2|3.2|无|
+|ganos\_raster|3.2|3.2|3.2|无|
+|ganos\_spatialref|3.2|3.2|3.2|无|
+|ganos\_tiger\_geocoder|3.2|3.2|3.2|无|
+|ganos\_trajectory|3.2|3.2|3.2|无|
 |hll|2.14|2.14|无|无|
 |hstore|1.6|1.5|1.4|1.3|
-|imgsmlr|无|无|无|1|
-|intagg|1.1|1.1|1.1|1|
-|intarray|1.2|1.2|1.2|1|
-|isn|1.2|1.2|1.1|1|
-|jsonbx|无|无|无|1|
-|log\_fdw|无|1|无|无|
-|ltree|1.1|1.1|1.1|1|
-|mysql\_fdw|1.1|无|1|无|
-|ogr\_fdw|无|1|1|无|
+|imgsmlr|无|无|无|1.0|
+|intagg|1.1|1.1|1.1|1.0|
+|intarray|1.2|1.2|1.2|1.0|
+|isn|1.2|1.2|1.1|1.0|
+|jsonbx|无|无|无|1.0|
+|log\_fdw|无|1.0|无|无|
+|ltree|1.1|1.1|1.1|1.0|
+|mysql\_fdw|1.1|无|1.0|无|
+|ogr\_fdw|无|1.0|1.0|无|
 |orafce|无|3.8|3.6|3.6|
 |oss\_fdw|无|1.1|1.1|1.1|
 |pase|无|0.0.1|无|无|
-|pg\_awr|无|无|无|1|
-|pg\_buffercache|1.3|1.3|1.3|1|
-|pg\_concurrency\_control|无|1|1|1|
-|pg\_cron|无|1.1|无|无|
+|pg\_awr|无|无|无|1.0|
+|pg\_bigm|1.2|1.2|1.2|无|
+|pg\_buffercache|1.3|1.3|1.3|1.0|
+|pg\_concurrency\_control|无|1.0|1.0|1.0|
+|pg\_cron|1.1|1.1|1.1|无|
 |pg\_hint\_plan|无|无|1.3.0|1.1.3|
 |pg\_pathman|无|1.5|1.5|无|
-|pg\_prewarm|1.2|1.2|1.1|1|
+|pg\_prewarm|1.2|1.2|1.1|1.0|
 |pg\_roaringbitmap|0.5.0|无|无|无|
 |pg\_sphere|无|无|1|1|
-|pg\_stat\_statements|无|1.6|无|1.2|
-|pg\_stat\_statements|1.7|无|1.6|无|
+|pg\_stat\_statements|1.7|1.6|1.6|1.2|
 |pg\_trgm|1.4|1.4|1.3|1.1|
 |pgcrypto|1.3|1.3|1.3|1.1|
 |pgrouting|无|2.6.2|2.6.2|2.0.0|
@@ -64,32 +63,32 @@
 |pgstattuple|1.5|1.5|1.5|1.2|
 |plcoffee|无|无|1.4.2|1.4.2|
 |plls|无|无|1.4.2|1.4.2|
-|plperl|1|1|1|1|
-|plpgsql|1|1|无|1|
+|plperl|1.0|1.0|1.0|1.0|
+|plpgsql|1.0|1.0|1.0|1.0|
 |plproxy|2.9.0|2.9.0|2.8.0|无|
-|pltcl|无|无|无|1|
+|pltcl|无|无|无|1.0|
 |plv8|无|2.3.13|1.4.2|1.4.2|
-|postgis|2.5.4|2.5.1|2.5.1|2.2.8|
-|postgis\_sfcgal|无|2.5.1|2.5.1|无|
-|postgis\_tiger\_geocoder|无|无|2.5.1|2.2.8|
-|postgis\_topology|无|2.5.1|2.5.1|2.2.8|
-|postgres\_fdw|1|1|1|1|
+|postgis|2.5.4|2.5.4|2.5.4|2.2.8|
+|postgis\_sfcgal|2.5.4|2.5.4|2.5.4|无|
+|postgis\_tiger\_geocoder|2.5.4|2.5.4|2.5.4|2.2.8|
+|postgis\_topology|2.5.4|2.5.4|2.5.4|2.2.8|
+|postgres\_fdw|1.0|1.0|1.0|1.0|
 |q3c|无|无|1.5.0|1.5.0|
 |rdkit|3.8|无|无|3.4|
 |rum|无|1.3|1.3|无|
-|smlar|1|1|无|1|
-|smlar|无|无|1|无|
-|sslinfo|1.2|1.2|1.2|1|
-|tablefunc|1|1|1|1|
-|tds\_fdw|1|2.0.1|无|无|
+|smlar|1.0|1.0|1.0|1.0|
+|sslinfo|1.2|1.2|1.2|1.0|
+|tablefunc|1.0|1.0|1.0|1.0|
+|tds\_fdw|2.0.1|2.0.1|无|无|
 |timescaledb|1.7.1|1.7.1|1.7.1|无|
-|tsearch2|无|无|无|1|
-|tsm\_system\_rows|1|1|无|无|
-|tsm\_system\_time|1|1|无|无|
-|unaccent|1.1|1.1|1.1|1|
-|uuid-ossp|无|无|1.1|1|
-|varbitx|无|1|1|1|
+|tsearch2|无|无|无|1.0|
+|tsm\_system\_rows|1.0|1.0|无|无|
+|tsm\_system\_time|1.0|1.0|无|无|
+|unaccent|1.1|1.1|1.1|1.0|
+|uuid-ossp|无|无|1.1|1.0|
+|varbitx|无|1.0|1.0|1.0|
 |wal2json|2|2.2|无|无|
-|zhparser|无|1|1|1|
-|zombodb|无|4|无|无|
+|xml2|1.1|1.1|1.1|1.0|
+|zhparser|无|1.0|1.0|1.0|
+|zombodb|无|4.0|无|无|
 
