--- a/intl.zh-CN/RDS MySQL 数据库/数据库代理（读写分离）/读写分离.md
+++ b/intl.zh-CN/RDS MySQL 数据库/数据库代理（读写分离）/读写分离.md
@@ -10,7 +10,7 @@
 
 创建只读实例后，您可以开通读写分离，此时独享代理地址就可以作为读写分离地址，在应用程序中配置独享代理地址，就可以使写请求自动转发到主实例，读请求自动转发到各个只读实例。
 
-![](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4813729951/p34381.png)
+![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4813729951/p34381.png)
 
 ## 读写分离地址和内外网地址区别
 
@@ -86,7 +86,7 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
@@ -96,7 +96,7 @@
 
 6.  设置如下参数。
 
-    ![设置权重](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4813729951/p95288.png)
+    ![设置权重](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5126037061/p95288.png)
 
     |参数|说明|
     |--|--|
@@ -110,7 +110,7 @@
 
 开通后，您需要在应用程序中配置读写分离地址（即独享代理地址），就可以使写请求自动转发到主实例，读请求自动转发到各个只读实例。
 
-![读写分离地址](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/4813729951/p113257.png)
+![读写分离地址](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4813729951/p113257.png)
 
 ## 常见问题
 
