--- a/intl.zh-CN/RDS SQL Server 数据库/实例/设置可维护时间段.md
+++ b/intl.zh-CN/RDS SQL Server 数据库/实例/设置可维护时间段.md
@@ -14,15 +14,13 @@
 
 2.  在左侧单击**实例列表**，然后在上方选择实例所在地域。
 
-    ![选择地域](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
+    ![选择地域](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3074469951/p36543.png)
 
 3.  找到目标实例，单击实例ID。
 
 4.  在**配置信息**区域，单击**可维护时间段**后的**设置**。
 
-    ![可维护时间段](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/7967559951/p3012.png)
-
-5.  选择一个时间段，单击**保存**。
+5.  选择一个合适的可维护时间段并保存。
 
     **说明：** 显示的可维护时间段和登录控制台的电脑的时区一致。
 
